// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[getDotTriples withEntities not found] "
  a :: b
  a :: b  
  " 1`] = `
Object {
  "size": 2,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "b",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "  a :: b",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
    Object {
      "object": Object {
        "raw": "b",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "  a :: b  ",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "
  a :: b
  c :: d  
  " 1`] = `
Object {
  "size": 2,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "b",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "  a :: b",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
    Object {
      "object": Object {
        "raw": "d",
      },
      "predicate": Object {
        "raw": "c",
      },
      "raw": "  c :: d  ",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "
  to simplify things, each
  property :: value
  spans one line
  " 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "value",
      },
      "predicate": Object {
        "raw": "property",
      },
      "raw": "  property :: value",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] " something :: points at :: [[Note]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "entities": Array [
          Object {
            "name": "Note",
            "uri": undefined,
          },
        ],
        "raw": "[[Note]]",
      },
      "predicate": Object {
        "raw": "points at",
      },
      "raw": " something :: points at :: [[Note]]",
      "subject": Object {
        "raw": "something",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] " something :: points at :: __THIS__" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
      "predicate": Object {
        "raw": "points at",
      },
      "raw": " something :: points at :: __THIS__",
      "subject": Object {
        "raw": "something",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "[[Note]] :: is a :: note" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "note",
      },
      "predicate": Object {
        "raw": "is a",
      },
      "raw": "[[Note]] :: is a :: note",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "Note",
            "uri": undefined,
          },
        ],
        "raw": "[[Note]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "__THIS__ :: is a :: note" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "note",
      },
      "predicate": Object {
        "raw": "is a",
      },
      "raw": "__THIS__ :: is a :: note",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "A :: B :: C :: D" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "exception": "ambiguous",
      "raw": "A :: B :: C :: D",
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "Maria :: climbed :: the tree" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "the tree",
      },
      "predicate": Object {
        "raw": "climbed",
      },
      "raw": "Maria :: climbed :: the tree",
      "subject": Object {
        "raw": "Maria",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "a :: h
a :: i
a :: i" 1`] = `
Object {
  "size": 3,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "h",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "a :: h",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
    Object {
      "object": Object {
        "raw": "i",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "a :: i",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
    Object {
      "object": Object {
        "raw": "i",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "a :: i",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "date :: 2022-01-07 15:07" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "2022-01-07 15:07",
      },
      "predicate": Object {
        "raw": "date",
      },
      "raw": "date :: 2022-01-07 15:07",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "external link :: <http://example.org>" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "<http://example.org>",
      },
      "predicate": Object {
        "raw": "external link",
      },
      "raw": "external link :: <http://example.org>",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "external link :: http://example.org" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "http://example.org",
      },
      "predicate": Object {
        "raw": "external link",
      },
      "raw": "external link :: http://example.org",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "internal link :: [[link]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "entities": Array [
          Object {
            "name": "link",
            "uri": undefined,
          },
        ],
        "raw": "[[link]]",
      },
      "predicate": Object {
        "raw": "internal link",
      },
      "raw": "internal link :: [[link]]",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "is a :: [[Editor]], [[Jour]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "entities": Array [
          Object {
            "name": "Editor",
            "uri": undefined,
          },
          Object {
            "name": "Jour",
            "uri": undefined,
          },
        ],
        "raw": "[[Editor]], [[Jour]]",
      },
      "predicate": Object {
        "raw": "is a",
      },
      "raw": "is a :: [[Editor]], [[Jour]]",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "properties :: and values are separated by double colons" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "and values are separated by double colons",
      },
      "predicate": Object {
        "raw": "properties",
      },
      "raw": "properties :: and values are separated by double colons",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "subject :: 'Quotes escape :: characters' :: object" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "exception": "ambiguous",
      "raw": "subject :: 'Quotes escape :: characters' :: object",
    },
  ],
}
`;

exports[`[getDotTriples withEntities not found] "vaccination dates :: 2022-01-07, next week" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "2022-01-07, next week",
      },
      "predicate": Object {
        "raw": "vaccination dates",
      },
      "raw": "vaccination dates :: 2022-01-07, next week",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "
  a :: b
  a :: b  
  " 1`] = `
Object {
  "size": 2,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "b",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "  a :: b",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
    Object {
      "object": Object {
        "raw": "b",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "  a :: b  ",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "
  a :: b
  c :: d  
  " 1`] = `
Object {
  "size": 2,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "b",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "  a :: b",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
    Object {
      "object": Object {
        "raw": "d",
      },
      "predicate": Object {
        "raw": "c",
      },
      "raw": "  c :: d  ",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "
  to simplify things, each
  property :: value
  spans one line
  " 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "value",
      },
      "predicate": Object {
        "raw": "property",
      },
      "raw": "  property :: value",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] " something :: points at :: [[Note]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "entities": Array [
          Object {
            "name": "Note",
            "uri": "Note_URI",
          },
        ],
        "raw": "[[Note]]",
      },
      "predicate": Object {
        "raw": "points at",
      },
      "raw": " something :: points at :: [[Note]]",
      "subject": Object {
        "raw": "something",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] " something :: points at :: __THIS__" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
      "predicate": Object {
        "raw": "points at",
      },
      "raw": " something :: points at :: __THIS__",
      "subject": Object {
        "raw": "something",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "[[Note]] :: is a :: note" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "note",
      },
      "predicate": Object {
        "raw": "is a",
      },
      "raw": "[[Note]] :: is a :: note",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "Note",
            "uri": "Note_URI",
          },
        ],
        "raw": "[[Note]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "__THIS__ :: is a :: note" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "note",
      },
      "predicate": Object {
        "raw": "is a",
      },
      "raw": "__THIS__ :: is a :: note",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "A :: B :: C :: D" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "exception": "ambiguous",
      "raw": "A :: B :: C :: D",
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "Maria :: climbed :: the tree" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "the tree",
      },
      "predicate": Object {
        "raw": "climbed",
      },
      "raw": "Maria :: climbed :: the tree",
      "subject": Object {
        "raw": "Maria",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "a :: h
a :: i
a :: i" 1`] = `
Object {
  "size": 3,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "h",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "a :: h",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
    Object {
      "object": Object {
        "raw": "i",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "a :: i",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
    Object {
      "object": Object {
        "raw": "i",
      },
      "predicate": Object {
        "raw": "a",
      },
      "raw": "a :: i",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "date :: 2022-01-07 15:07" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "2022-01-07 15:07",
      },
      "predicate": Object {
        "raw": "date",
      },
      "raw": "date :: 2022-01-07 15:07",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "external link :: <http://example.org>" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "<http://example.org>",
      },
      "predicate": Object {
        "raw": "external link",
      },
      "raw": "external link :: <http://example.org>",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "external link :: http://example.org" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "http://example.org",
      },
      "predicate": Object {
        "raw": "external link",
      },
      "raw": "external link :: http://example.org",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "internal link :: [[link]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "entities": Array [
          Object {
            "name": "link",
            "uri": "link_URI",
          },
        ],
        "raw": "[[link]]",
      },
      "predicate": Object {
        "raw": "internal link",
      },
      "raw": "internal link :: [[link]]",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "is a :: [[Editor]], [[Jour]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "entities": Array [
          Object {
            "name": "Editor",
            "uri": "Editor_URI",
          },
          Object {
            "name": "Jour",
            "uri": "Jour_URI",
          },
        ],
        "raw": "[[Editor]], [[Jour]]",
      },
      "predicate": Object {
        "raw": "is a",
      },
      "raw": "is a :: [[Editor]], [[Jour]]",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "properties :: and values are separated by double colons" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "and values are separated by double colons",
      },
      "predicate": Object {
        "raw": "properties",
      },
      "raw": "properties :: and values are separated by double colons",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "subject :: 'Quotes escape :: characters' :: object" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "exception": "ambiguous",
      "raw": "subject :: 'Quotes escape :: characters' :: object",
    },
  ],
}
`;

exports[`[getDotTriples withEntities] "vaccination dates :: 2022-01-07, next week" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": "2022-01-07, next week",
      },
      "predicate": Object {
        "raw": "vaccination dates",
      },
      "raw": "vaccination dates :: 2022-01-07, next week",
      "subject": Object {
        "entities": Array [
          Object {
            "name": "CURRENT_NAME",
            "uri": "CURRENT_URI",
          },
        ],
        "raw": "[[CURRENT_NAME]]",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "
  a :: b
  a :: b  
  " 1`] = `
Object {
  "size": 2,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " b",
      },
      "predicate": Object {
        "raw": "  a ",
      },
      "raw": "  a :: b",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
    Object {
      "object": Object {
        "raw": " b  ",
      },
      "predicate": Object {
        "raw": "  a ",
      },
      "raw": "  a :: b  ",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "
  a :: b
  c :: d  
  " 1`] = `
Object {
  "size": 2,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " b",
      },
      "predicate": Object {
        "raw": "  a ",
      },
      "raw": "  a :: b",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
    Object {
      "object": Object {
        "raw": " d  ",
      },
      "predicate": Object {
        "raw": "  c ",
      },
      "raw": "  c :: d  ",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "
  to simplify things, each
  property :: value
  spans one line
  " 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " value",
      },
      "predicate": Object {
        "raw": "  property ",
      },
      "raw": "  property :: value",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] " something :: points at :: [[Note]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " [[Note]]",
      },
      "predicate": Object {
        "raw": " points at ",
      },
      "raw": " something :: points at :: [[Note]]",
      "subject": Object {
        "raw": " something ",
      },
    },
  ],
}
`;

exports[`[getDotTriples] " something :: points at :: __THIS__" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " __THIS__",
      },
      "predicate": Object {
        "raw": " points at ",
      },
      "raw": " something :: points at :: __THIS__",
      "subject": Object {
        "raw": " something ",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "[[Note]] :: is a :: note" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " note",
      },
      "predicate": Object {
        "raw": " is a ",
      },
      "raw": "[[Note]] :: is a :: note",
      "subject": Object {
        "raw": "[[Note]] ",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "__THIS__ :: is a :: note" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " note",
      },
      "predicate": Object {
        "raw": " is a ",
      },
      "raw": "__THIS__ :: is a :: note",
      "subject": Object {
        "raw": "__THIS__ ",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "A :: B :: C :: D" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "exception": "ambiguous",
      "raw": "A :: B :: C :: D",
    },
  ],
}
`;

exports[`[getDotTriples] "Maria :: climbed :: the tree" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " the tree",
      },
      "predicate": Object {
        "raw": " climbed ",
      },
      "raw": "Maria :: climbed :: the tree",
      "subject": Object {
        "raw": "Maria ",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "a :: h
a :: i
a :: i" 1`] = `
Object {
  "size": 3,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " h",
      },
      "predicate": Object {
        "raw": "a ",
      },
      "raw": "a :: h",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
    Object {
      "object": Object {
        "raw": " i",
      },
      "predicate": Object {
        "raw": "a ",
      },
      "raw": "a :: i",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
    Object {
      "object": Object {
        "raw": " i",
      },
      "predicate": Object {
        "raw": "a ",
      },
      "raw": "a :: i",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "date :: 2022-01-07 15:07" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " 2022-01-07 15:07",
      },
      "predicate": Object {
        "raw": "date ",
      },
      "raw": "date :: 2022-01-07 15:07",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "external link :: <http://example.org>" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " <http://example.org>",
      },
      "predicate": Object {
        "raw": "external link ",
      },
      "raw": "external link :: <http://example.org>",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "external link :: http://example.org" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " http://example.org",
      },
      "predicate": Object {
        "raw": "external link ",
      },
      "raw": "external link :: http://example.org",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "internal link :: [[link]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " [[link]]",
      },
      "predicate": Object {
        "raw": "internal link ",
      },
      "raw": "internal link :: [[link]]",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "is a :: [[Editor]], [[Jour]]" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " [[Editor]], [[Jour]]",
      },
      "predicate": Object {
        "raw": "is a ",
      },
      "raw": "is a :: [[Editor]], [[Jour]]",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "properties :: and values are separated by double colons" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " and values are separated by double colons",
      },
      "predicate": Object {
        "raw": "properties ",
      },
      "raw": "properties :: and values are separated by double colons",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;

exports[`[getDotTriples] "subject :: 'Quotes escape :: characters' :: object" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "exception": "ambiguous",
      "raw": "subject :: 'Quotes escape :: characters' :: object",
    },
  ],
}
`;

exports[`[getDotTriples] "vaccination dates :: 2022-01-07, next week" 1`] = `
Object {
  "size": 1,
  "triples": Array [
    Object {
      "object": Object {
        "raw": " 2022-01-07, next week",
      },
      "predicate": Object {
        "raw": "vaccination dates ",
      },
      "raw": "vaccination dates :: 2022-01-07, next week",
      "subject": Object {
        "raw": "__THIS__",
      },
    },
  ],
}
`;
